--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -1,10 +1,11 @@
 name: Tests
 
 on:
-  push:
-    branches: [ main, development, feat/*, rc/* ]
   pull_request:
-    branches: [ main, development, feat/*, rc/* ]
+    branches: [ main, rc/*, feat/* ]
+    types: [ opened, ready_for_review ]
+  push:
+  workflow_dispatch:
 
 jobs:
   test:
